[package]
name = "rusty-leveldb"
version = "0.1.0"
authors = ["Lewin Bormann <lbo@spheniscida.de>"]
description = "A compatible re-implementation of LevelDB in Rust"
homepage = "https://github.com/dermesser/leveldb-rs"
repository = "https://github.com/dermesser/leveldb-rs"
readme = "README.md"
keywords = ["LevelDB", "key-value", "database", "SSTable", "Google"]
license = "MIT"
publish = true
edition = "2021"
include = ["src/**/*", "src/*", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
crc = "3.0.1"
integer-encoding = "3.0"
rand = "0.8.5"
snap = "1.0"
errno = "0.3.1"
fs2 = "0.4.3"

tokio = { optional = true, features = ["rt", "sync"], version = ">= 1.21" }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
time-test = "0.2"
bencher = "0.1"

[[bench]]
name = "maps_bench"
harness = false
path = "src/benches/maps_bench.rs"

[workspace]
members = [
    "examples/write-a-lot",
    "examples/leveldb-tool",
    "examples/word-analyze",
    "examples/stresstest",
    "examples/asyncdb",
    "examples/debug_tool"
]